@startuml

class "ClassDiagram"

interface "Classes" {
  list() : List<Class<?>>
}

class "ClsFiltered" {
  ignored : Classes
  list() : List<Class<?>>
}

class "ClsInPackage" {
  packageName : String
  classGraph : ClassGraph
  list() : List<Class<?>>
}

class "ClsWithNames" {
  names : List<String>
  classLoader : ClassLoader
  list() : List<Class<?>>
}

interface "Diagram" {
  content() : String
  print(File)
}

class "FilesUrls" {
  files : List<File>
  list() : List<URL>
}

class "InvalidPackageException"

class "MergedUrls" {
  urls : List<Urls>
  list() : List<URL>
}

interface "Urls" {
  list() : List<URL>
}

"Classes" <-> "ClsFiltered" : /ignored
"Classes" <|-- "ClsInPackage"
"Classes" <|-- "ClsWithNames"
"Diagram" <|-- "ClassDiagram"
"Urls" <|-- "FilesUrls"
"Urls" "*" <-> "MergedUrls" : /urls

@enduml